Adjust env files

--- a/app/app/views/feeds/index.html.erb
+++ b/app/app/views/feeds/index.html.erb
@@ -57,7 +57,7 @@
               </h3>
 
               <div class="mdc-typography--body2">
-                <%= event.place.name[0..40] %>
+                <%= event.place.name[0..40] if event.place %>
                 <%# event.place.address %>
               </div>
             </div>
