--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -13,4 +13,8 @@ $border-color: #e0e0e0;
   & .mdc-top-app-bar__navigation-icon {
     color: $font-color;
   }
+
+  & .mdc-top-app-bar__section {
+    width: calc(100% / 3);
+  }
 }
