--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -13,7 +13,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <% current_user.all_favorited(scope: ['favorite']).reverse.each do |event| %>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2" data-target="favorite.event" data-action="mouseover->favorite#showEventName mouseout->favorite#hideEventName">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2" data-target="favorite.event" data-action="mouseover->favorite#showEventName">
           <div class="me-card mdc-card">
             <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
             </div>
@@ -34,47 +34,46 @@
 <h2 class="mdc-typography--headline2">Eventos indicados para você</h2>
 
 <div class="me-feed">
-
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <% @events.each do |event| %>
+      <% @events[0...10].each do |event| %>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
 
-        <div class="me-card mdc-card mdc-card--outlined event-<%= event.id %>" data-controller="event" data-target="event.event" data-event-favorited="<%= current_user.favorited?(event, scope: ['favorite']) if current_user %>" data-event-identifier="<%= event.id %>">
-          <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
-          </div>
+        <a href="<%= event.url %>">
+          <div class="me-card mdc-card mdc-card--outlined event-<%= event.id %>" data-controller="event" data-target="event.event" data-action="mouseover->event#showEventPlace" data-event-favorited="<%= current_user.favorited?(event, scope: ['favorite']) if current_user %>" data-event-identifier="<%= event.id %>">
+            <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
+            </div>
 
-          <div class="mdc-card__primary-action" tabindex="0">
-            <a href="<%= event.url %>">
-              <h2 class="mdc-card__title mdc-typography--headline2">
-                <%= event.name[0..50] %>
-              </h2>
-            </a>
-            <h3 class="mdc-card__subtitle mdc-typography--subtitle1">
-              <%= next_day_to_occur(event) %>
-            </h3>
 
-            <div class="mdc-typography--body2">
+            <div class="mdc-card__title" data-target="event.name">
+              <%= event.name[0..50] %>
+            </div>
+
+            <div class="me-card__place" data-target="event.place" style="display: none">
               <%= event.place.name[0..40] if event.place %>
-              <%# event.place.address %>
             </div>
-          </div>
 
-          <div class="mdc-card__actions">
-            <div data-action="click->event#like">
-              <div data-target="event.like">
-                <button data-target="event.likeButton" class="me-like-button mdc-button mdc-button--dense <%= 'mdc-button--raised' if favorited event %>">
-                  <i class="material-icons mdc-button__icon">star</i>
-                  <span class="mdc-button__label" style="text-align: right">
-                    <%= favorited(event) ? "Salvo" : "Salvar" %>
-                  </span>
-                </button>
+            <div class="me-card__date" data-target="event.date" style="display: none">
+              <%= event.day_of_week %>
+            </div>
+
+            <!-- <div class="mdc-card__actions">
+              <div data-action="click->event#like">
+                <div data-target="event.like">
+                  <button data-target="event.likeButton" class="me-like-button mdc-button mdc-button--dense <%= 'mdc-button--raised' if favorited event %>">
+                    <i class="material-icons mdc-button__icon">star</i>
+                    <span class="mdc-button__label" style="text-align: right">
+                      <%= favorited(event) ? "Salvo" : "Salvar" %>
+                    </span>
+                  </button>
+                </div>
               </div>
-            </div>
-          </div>
+            </div> -->
 
-        </div>
+          </div>
+        </a>
       </div>
       <% end %>
     </div>
   </div>
+</div>
