--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -13,6 +13,7 @@
     font-size: 12px;
     border: 0;
     box-shadow: none;
+    background-color: inherit;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
 
 
