Create float menu

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -64,6 +64,9 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  font-family: Roboto;
+  font-size: 14px;
+  color: #212121;
 }
 
 a {
