--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -30,6 +30,15 @@ $description-color: $font-secondary-color;
     }
   }
 
+  &__overlay {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    background: linear-gradient(to top, #ffffff38, transparent);
+  }
+
   &__place {
     color: $name-color;
     font-size: 14px;
@@ -76,4 +85,6 @@ $description-color: $font-secondary-color;
   & .mdc-card__media {
     border-radius: 2px;
   }
+
+
 }
