--- a/bot/eme/public/css/styles.css
+++ b/bot/eme/public/css/styles.css
@@ -101,8 +101,6 @@ a.button {
 /* chat client */
 #message_window {
   background: #FFFFFF;
-  border-left: 1px solid #CCC;
-  border-right: 1px solid #CCC;
   /*height: 500px;
   width: 320px;*/
   height: 100%;
@@ -110,7 +108,7 @@ a.button {
   /*margin: 2rem auto;*/
   display: flex;
   flex-direction: column;
-  font-family: 'helvetica', sans-serif; }
+  font-family: Roboto; }
   #message_window .disconnected {
     background: #FFFFCC;
     padding: 0.25rem; }
@@ -151,20 +149,25 @@ a.button {
     padding: 0.25rem; }
     #message_window footer input[type="text"] {
       flex-grow: 1;
-      font-size: 1.25rem;
+      font-size: 0.75rem;
       outline: none;
-      border: none; }
+      border: none;
+      font-family: Roboto; }
     #message_window footer button {
       width: 50px;
       background: none;
       border: 0;
       cursor: pointer;
-      color: blue;
-      font-weight: bold; }
+      color: #5ecf80;
+      font-weight: 500;
+      font-family: Roboto; }
+  #message_window b {
+    font-weight: 500; }
   #message_window form {
     display: flex;
     margin: 0;
-    padding: 0.25rem; }
+    padding: 0.25rem;
+    font-family: Roboto; }
   #message_window #message_template {
     display: none; }
   #message_window .message {
@@ -180,8 +183,9 @@ a.button {
     background: #F0F0F0;
     color: #333;
     border-radius: 5px;
-    display: inline-block;
-    max-width: 75%; }
+    width: fit-content;
+    display: block;
+    padding: 4px; }
     #message_window .file_attachment img {
       max-width: 100%;
       display: block; }
@@ -204,7 +208,7 @@ a.button {
     margin-bottom: 0; }
   #message_window .message.outgoing {
     float: right;
-    background: #a795ef;
+    background: #5ecf80;
     color: white; }
   #message_window #message_replies {
     text-align: center;
@@ -223,14 +227,16 @@ a.button {
     #message_window #message_replies a {
       text-decoration: none;
       display: block;
-      border: 1px solid #a795ef;
-      color: #a795ef;
-      border-radius: 16px;
-      padding: 0.25rem 1rem;
-      font-size: 14px;
-      cursor: pointer; }
+      border: 1px solid #34ad58;
+      color: #34ad58;
+      border-radius: 25px;
+      padding: 0.45rem 1rem;
+      font-size: 12px;
+      cursor: pointer;
+      font-weight: 500;
+      text-transform: uppercase; }
       #message_window #message_replies a:hover {
-        background: #a795ef;
+        background: #34ad58;
         color: #FFF; }
 
 /* typing indicator CSS based on code by Joseph Fusco -> https://codepen.io/fusco/pen/XbpaYv */
