--- a/bot/eme/sass/_chat.scss
+++ b/bot/eme/sass/_chat.scss
@@ -1,117 +1,128 @@
+$brand-color: #5ecf80;
+$font-primary-color: #000000;
+$font-secondary-color: #4a4a4a;
 $action_color: orange;
 $background: #FFFFFF;
 $bot_message_background: #F0F0F0;
 $bot_message_text: #333;
-$human_message_background: $botkit_purple;
+$human_message_background: $brand-color;
 $human_message_text: white;
 
 #message_window {
-    background: $background;
-    border-left: 1px solid #CCC;
-    border-right: 1px solid #CCC;
+  background: $background;
+  // border-left: 1px solid #CCC;
+  // border-right: 1px solid #CCC;
 
-    /*height: 500px;
-    width: 320px;*/
-    height: 100%;
-    width: 100%;
-    /*margin: 2rem auto;*/
-    display: flex;
-    flex-direction: column;
-    font-family: 'helvetica', sans-serif;
+  /*height: 500px;
+  width: 320px;*/
+  height: 100%;
+  width: 100%;
+  /*margin: 2rem auto;*/
+  display: flex;
+  flex-direction: column;
+  font-family: Roboto;
+
+  .disconnected {
+    background: #FFFFCC;
+    padding: 0.25rem;
+  }
+  &.connected .disconnected {
+    display: none;
+  }
+  .offline {
+    display: none;
+  }
+  &.offline {
 
     .disconnected {
-        background: #FFFFCC;
-        padding: 0.25rem;
-    }
-    &.connected .disconnected {
-        display: none;
+      display: none;
     }
     .offline {
-        display: none;
-    }
-    &.offline {
-
-      .disconnected {
-        display: none;
-      }
-      .offline {
-        background: #FF0000;
-        color: #FFF;
-        padding: 0.25rem;
-        display: block;
-      }
-    }
-
-    .powered_by {
-      flex-shrink: 0;
-      text-align: center;
-
-      border-bottom: 1px solid #CCC;
-      font-size: 14px;
+      background: #FF0000;
+      color: #FFF;
       padding: 0.25rem;
+      display: block;
+    }
+  }
+
+  .powered_by {
+    flex-shrink: 0;
+    text-align: center;
+
+    border-bottom: 1px solid #CCC;
+    font-size: 14px;
+    padding: 0.25rem;
+    color: #666;
+
+    a {
+      text-decoration: none;
       color: #666;
-
-      a {
-        text-decoration: none;
-        color: #666;
-      }
-
-      img {
-        position: relative;
-        top: 2px;
-      }
     }
 
-   section {
-      flex-grow:  1;
-      flex-direction: column-reverse;
-      display: flex;
-      overflow-y: auto;
+    img {
+      position: relative;
+      top: 2px;
+    }
+  }
 
-     div div {
-        margin: 0.25rem;
-        clear: both;
+  section {
+    flex-grow:  1;
+    flex-direction: column-reverse;
+    display: flex;
+    overflow-y: auto;
+
+    div div {
+      margin: 0.25rem;
+      clear: both;
     }
   }
 
   footer {
-      border-top: 1px solid #CCC;
-      padding: 0.25rem;
-      input[type="text"] {
-          flex-grow: 1;
-          font-size: 1.25rem;
-          outline: none;
-          border: none;
-      }
-      button {
-         width: 50px;
-         background: none;
-         border: 0;
-         cursor: pointer;
-         color: blue;
-         font-weight: bold;
-     }
+    border-top: 1px solid #CCC;
+    padding: 0.25rem;
+    input[type="text"] {
+      flex-grow: 1;
+      font-size: 0.75rem;
+      outline: none;
+      border: none;
+      font-family: Roboto;
+    }
+
+    button {
+      width: 50px;
+      background: none;
+      border: 0;
+      cursor: pointer;
+      color: $brand-color;
+      font-weight: 500;
+      font-family: Roboto;
+    }
+  }
+
+  b {
+    font-weight: 500;
   }
 
   form {
-      display: flex;
-      margin: 0;
-      padding: 0.25rem;
+    display: flex;
+    margin: 0;
+    padding: 0.25rem;
+    font-family: Roboto;
   }
 
   #message_template {
-      display: none;
+    display: none;
   }
 
   .message {
-      font-size: 14px;
-      padding: 0.5rem;
-      background: $bot_message_background;
-      color: $bot_message_text;
-      border-radius: 5px;
-      width: auto;
-      display: inline-block;
-      max-width: 75%;
+    font-size: 14px;
+    padding: 0.5rem;
+    background: $bot_message_background;
+    color: $bot_message_text;
+    border-radius: 5px;
+    width: auto;
+    display: inline-block;
+    max-width: 75%;
 
   }
 
@@ -120,8 +131,9 @@ $human_message_text: white;
     background: $bot_message_background;
     color: $bot_message_text;
     border-radius: 5px;
-    display: inline-block;
-    max-width: 75%;
+    width: fit-content;
+    display: block;
+    padding: 4px;
 
     img {
       max-width: 100%;
@@ -130,71 +142,73 @@ $human_message_text: white;
 
   }
 
-    .button_message {
-      margin: 1rem 0;
-      border-radius: 4px;
-      border-color: $action_color;
-      border-style: solid;
-      color: $action_color;
-      border-width: 1px;
-      padding: 0.25rem 1rem;
-      text-decoration: none;
-      text-align: center;
-      box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
-      display: block;
-    }
+  .button_message {
+    margin: 1rem 0;
+    border-radius: 4px;
+    border-color: $action_color;
+    border-style: solid;
+    color: $action_color;
+    border-width: 1px;
+    padding: 0.25rem 1rem;
+    text-decoration: none;
+    text-align: center;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.25);
+    display: block;
+  }
 
 
   .message p {
-      margin-top: 0;
-      margin-bottom: 0.5rem;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
   }
 
   .message p:last-child {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 
   .message.outgoing {
-      float: right;
+    float: right;
 
-      background: $human_message_background;
-      color: $human_message_text;
+    background: $human_message_background;
+    color: $human_message_text;
 
   }
 
   #message_replies {
-      text-align: center;
-      overflow-x: auto;
-      flex-shrink: 0;
-      -webkit-overflow-scrolling: touch; /* Lets it scroll lazy */
+    text-align: center;
+    overflow-x: auto;
+    flex-shrink: 0;
+    -webkit-overflow-scrolling: touch; /* Lets it scroll lazy */
 
-      ul {
-          list-style-type: none;
-          margin: 0px auto;
-          padding: 0;
-          li {
-              display: inline-block;
-              margin: 0.5rem;
-              margin-left: 0;
-          }
+    ul {
+      list-style-type: none;
+      margin: 0px auto;
+      padding: 0;
+      li {
+        display: inline-block;
+        margin: 0.5rem;
+        margin-left: 0;
       }
+    }
 
-      a {
-         text-decoration: none;
-         display: block;
-         border: 1px solid $botkit_purple;
-         color: $botkit_purple;
-         border-radius: 16px;
-         padding: 0.25rem 1rem;
-         font-size: 14px;
-         cursor: pointer;
+    a {
+      text-decoration: none;
+      display: block;
+      border: 1px solid darken($color: $brand-color, $amount: 15%);
+      color: darken($color: $brand-color, $amount: 15%);
+      border-radius: 25px;
+      padding: 0.45rem 1rem;
+      font-size: 12px;
+      cursor: pointer;
+      font-weight: 500;
+      text-transform: uppercase;
 
-         &:hover {
-           background: $botkit_purple;
-           color: #FFF;
-         }
-     }
-   }
+      &:hover {
+        background: darken($color: $brand-color, $amount: 15%);
+        color: #FFF;
+      }
+    }
+  }
 }
 
 
