--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -29,21 +29,37 @@
           </span>
         </section>
         <section class="mdc-top-app-bar__section" style="display: flex; width: 65%">
-          <div class="me-search-field mdc-text-field">
-            <iron-icon icon="search" aria-hidden="true" class="search-icon"><svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" class="style-scope iron-icon"></path></g></svg>
+          <div data-controller="chat" data-target="chat.field" class="me-search-field me-search-field mdc-text-field">
+            <iron-icon data-target="chat.botIcon" icon="search" aria-hidden="true" class="search-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="isolation:isolate" viewBox="197.403 624.831 51.688 40.571" width="51.688" height="40.571"><g><path d=" M 207.376 630.618 L 207.376 630.618 Q 210.952 625.738 217.285 625.517 L 217.285 625.517 L 217.285 625.517 Q 223.617 625.296 226.442 629.88 L 226.442 629.88 L 226.442 629.88 Q 230.093 625.07 236.641 624.841 L 236.641 624.841 L 236.641 624.841 Q 247.722 624.454 248.202 638.198 L 248.202 638.198 L 249.091 663.67 L 238.01 664.057 L 237.103 638.081 L 237.103 638.081 Q 236.94 633.404 233.126 633.537 L 233.126 633.537 L 233.126 633.537 Q 230.392 633.633 228.81 635.777 L 228.81 635.777 L 229.807 664.344 L 218.798 664.728 L 217.891 638.752 L 217.891 638.752 Q 217.727 634.075 213.842 634.211 L 213.842 634.211 L 213.842 634.211 Q 211.251 634.301 209.525 636.451 L 209.525 636.451 L 210.523 665.017 L 199.514 665.402 L 198.569 638.346 L 197.403 627.652 L 205.928 626.274 L 207.089 630.628 L 207.376 630.618 Z " fill="rgb(0,0,0)"/></g></svg>
             </iron-icon>
-            <input type="text" placeholder="O que você quer fazer em Porto Alegre?" id="text-field-shape-one" class="mdc-text-field__input">
+            <input data-target="chat.input" type="text" placeholder="Oi, tem alguem ai?" id="text-field-shape-one" class="mdc-text-field__input">
+            <div data-target="chat.botConversation" class="me-search-field__bot">
+              <iframe  id="botkit_client" src="//localhost:3030/chat.html"></iframe>
+            </div>
+            <div data-target="chat.reply" data-action="click->chat#showBot" class="me-search-field__reply">
+              <span>Sim, estou aqui</span>
+            </div>
+            <script src="//localhost:3030/embed.js"></script>
+            <script>
+              var options = {}; // for options, see: https://github.com/howdyai/botkit-starter-web/blob/master/docs/botkit_web_client.md#botkitbootuser
+              Botkit.boot(options);
+            </script>
+            <link rel="stylesheet" href="//localhost/css/embed.css" />
+
           </div>
         </section>
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
           <% unless current_user %>
-            <a href="/users/sign_in">Entrar</a>
+          <a href="/users/sign_in">Entrar</a>
           <% end %>
         </section>
       </div>
     </header>
 
     <section class="me-page__feed-section" style="max-width: 885px; margin: auto">
+      <div class="me-overlay">
+      </div>
       <%= yield %>
     </section>
   </div>
