Adjust order in favorite events

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,3 +1,6 @@
 $brand-color: #5ecf80;
 $font-primary-color: #000000;
 $font-secondary-color: #4a4a4a;
+$icon-color: #616161;
+$icon-background-color: #f0f0f0;
+$border-color: #e0e0e0;
