--- a/web/app/assets/stylesheets/components/me-components.scss
+++ b/web/app/assets/stylesheets/components/me-components.scss
@@ -1,7 +1,11 @@
-@import "me-feed";
-@import "me-single";
-@import "me-favorite";
-@import "me-page";
 @import "me-card";
+@import "me-favorite";
+@import "me-feed";
+@import "me-float-menu";
+@import "me-icon-button";
+@import "me-icon";
+@import "me-overlay";
+@import "me-page";
 @import "me-search-field";
+@import "me-single";
 @import "me-top-app-bar";
