--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -38,19 +38,32 @@
   <h2 data-target="favorite.header" class="mdc-typography--headline2">
     Eventos salvos
   </h2>
-  <div class="saved-list" data-target="favorite.list">
+  <div class="me-icon__group">
+    <div data-target="favorite.scrollLeft" data-action="click->favorite#scrollLeft" class="me-icon me-icon--scroll-left">
+      <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" class="style-scope iron-icon"></path></g></svg>
+    </div>
+    <div data-target="favorite.scrollRight" data-action="click->favorite#scrollRight" class="me-icon me-icon--scroll-right">
+      <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z" class="style-scope iron-icon"></path></g></svg>
+    </div>
+  </div>
+  <div class="saved-list">
     <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <% current_user.all_favorited(scope: ['favorite']).reverse.each do |event| %>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2" data-target="favorite.event" data-action="mouseover->favorite#showEventName">
-          <div class="me-card mdc-card">
-            <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
-            </div>
-            <div class="mdc-typography--body2">
-              <%= link_to(event.name, event.url) %>
+      <div data-target="favorite.list" class="mdc-layout-grid__inner">
+        <% @favorited_events.each do |event| %>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+            <div class="me-card mdc-card event-<%= event.id %>" data-target="favorite.event" data-action="mouseover->favorite#showEventName">
+              <a href="<%= event.url %>">
+                <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
+                </div>
+                <div class="me-card__date" data-target="favorite.date">
+                  <%= event.day_of_week %>
+                </div>
+                <div class="me-card__title mdc-card__title" data-target="favorite.title" style="display: none">
+                  <%= event.name %>
+                </div>
+              </a>
             </div>
           </div>
-        </div>
         <% end %>
       </div>
     </div>
