--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -26,7 +26,13 @@ $description-color: $font-secondary-color;
     }
 
     & p {
+      font-size: 14px;
       margin: 0;
+      line-height: 1.6em;
+    }
+
+    & br {
+      line-height: 2.6em;
     }
   }
 
