--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -18,16 +18,16 @@
 
           <div class="me-card__secondary">
             <h3 class="mdc-card__subtitle mdc-typography--subtitle1">
-              <%= @event.day_of_week %>
             </h3>
 
             <div class="mdc-typography--body2">
-            <% if @event.place %>
-                <p><b>Local:</b> <%= @event.place.name[0..40] %></p>
-                <p><b>Endereço:</b> <%= @event.place.address %></p>
-            <% end %>
-            <p><b>Descrição:</b> <%= @event.description.html_safe %></p>
-          </div>
+              <b>Quando:</b> <%= @event.day_of_week %><br>
+              <% if @event.place %>
+              <b>Local:</b> <%= @event.place.name[0..40] %><br>
+              <b>Endereço:</b> <%= @event.place.address %><br>
+              <% end %>
+              <b>Descrição:</b> <%= @event.description.html_safe %><br>
+            </div>
           </div>
 
           <div class="me-card__like-button" data-action="click->event#like">
