--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -73,44 +73,13 @@
 
 
 <div class="me-feed">
-  <h2 class="mdc-typography--headline1">Eventos indicados para você</h2>
-  <div class="me-feed__divider"></div>
-
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
-      <% @events[0...50].each do |event| %>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-        <div class="me-card mdc-card mdc-card--outlined event-<%= event.id %>" data-controller="event" data-target="event.event" data-action="mouseover->event#showEventDetails" data-event-favorited="<%= current_user.favorited?(event, scope: ['favorite']) if current_user %>" data-event-identifier="<%= event.id %>">
-          <a href="<%= event.url %>">
-            <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
-              <div class="me-card__overlay"></div>
-            </div>
-
-            <div class="mdc-card__title" data-target="event.name">
-              <%= event.name[0..50] %>
-            </div>
-
-            <div class="me-card__place" data-target="event.place" style="display: none">
-              <%= event.place.name[0..40] if event.place %>
-            </div>
-
-            <div class="me-card__date" data-target="event.date" style="display: none">
-              <%= event.day_of_week %>
-            </div>
-          </a>
-
-          <div class="me-card__like-button" data-action="click->event#like">
-            <div data-target="event.like">
-              <button data-target="event.likeButton" id="add-to-favorites" class="me-icon-button mdc-icon-button <%= 'mdc-icon-button--on' if favorited(event) %>" style="display: none" aria-label="Add to favorites" aria-hidden="true" aria-pressed="false">
-                <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
-                <i class="material-icons mdc-icon-button__icon">star_border</i>
-              </button>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <% end %>
-    </div>
-  </div>
+  <%# render partial: "section", locals: { events: @events, title: "Eventos indicados para você" } %>
+  <%= render partial: "section", locals: { events: @events[:underground], title: "Eventos underground" } %>
+  <%= render partial: "section", locals: { events: @events[:hipster], title: "Eventos para hipster" } %>
+  <%= render partial: "section", locals: { events: @events[:cult], title: "Eventos para cult" } %>
+  <%= render partial: "section", locals: { events: @events[:geek], title: "Eventos para geek" } %>
+  <%= render partial: "section", locals: { events: @events[:praieiro], title: "Eventos para praieiros urbanos" } %>
+  <%= render partial: "section", locals: { events: @events[:aventureiro], title: "Eventos para aventureiro" } %>
+  <%= render partial: "section", locals: { events: @events[:turista], title: "Eventos para turista" } %>
+  <%= render partial: "section", locals: { events: @events[:zeen], title: "Eventos para zeen" } %>
 </div>
