Create jsonb for save dates and personas

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -54,6 +54,7 @@ font-weight: 100
 @import "@material/drawer/mdc-drawer";
 @import "@material/list/mdc-list";
 @import "@material/textfield/mdc-text-field";
+@import "@material/select/mdc-select";
 @import "components/me-components";
 
 
