--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -12,7 +12,7 @@
           </div>
 
           <div class="mdc-card__title" data-target="event.name">
-            <%= event.name[0..50] %>
+            <%= event.name %>
           </div>
 
           <div class="me-card__place" data-target="event.place" style="display: none">
