--- a/web/app/views/events/edit.html.erb
+++ b/web/app/views/events/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Event</h1>
+<h1>Editar evento</h1>
 
 <%= render 'form', event: @event %>
-
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
