--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -74,12 +74,12 @@
 
 <div class="me-feed">
   <%# render partial: "section", locals: { events: @events, title: "Eventos indicados para você" } %>
-  <%= render partial: "section", locals: { events: @events[:underground], title: "Eventos underground" } %>
-  <%= render partial: "section", locals: { events: @events[:hipster], title: "Eventos para hipster" } %>
-  <%= render partial: "section", locals: { events: @events[:cult], title: "Eventos para cult" } %>
-  <%= render partial: "section", locals: { events: @events[:geek], title: "Eventos para geek" } %>
-  <%= render partial: "section", locals: { events: @events[:praieiro], title: "Eventos para praieiros urbanos" } %>
-  <%= render partial: "section", locals: { events: @events[:aventureiro], title: "Eventos para aventureiro" } %>
-  <%= render partial: "section", locals: { events: @events[:turista], title: "Eventos para turista" } %>
-  <%= render partial: "section", locals: { events: @events[:zeen], title: "Eventos para zeen" } %>
+  <%= render partial: "section", locals: { events: @events[:underground], title: "Eventos underground" } unless @events[:underground].empty? %>
+  <%= render partial: "section", locals: { events: @events[:hipster], title: "Eventos para hipster" } unless @events[:hipster].empty? %>
+  <%= render partial: "section", locals: { events: @events[:cult], title: "Eventos para cult" } unless @events[:cult].empty? %>
+  <%= render partial: "section", locals: { events: @events[:geek], title: "Eventos para geek" } unless @events[:geek].empty? %>
+  <%= render partial: "section", locals: { events: @events[:praieiro], title: "Eventos para praieiros urbanos" } unless @events[:praieiro].empty? %>
+  <%= render partial: "section", locals: { events: @events[:aventureiro], title: "Eventos para aventureiro" } unless @events[:aventureiro].empty? %>
+  <%= render partial: "section", locals: { events: @events[:turista], title: "Eventos para turista" } unless @events[:turista].empty? %>
+  <%= render partial: "section", locals: { events: @events[:zeen], title: "Eventos para zeen" } unless @events[:zeen].empty? %>
 </div>
