--- a/web/app/views/feeds/train.html.erb
+++ b/web/app/views/feeds/train.html.erb
@@ -11,7 +11,7 @@
         <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon" style="pointer-events: none; display: block; width: 100%; height: 100%;"><g class="style-scope iron-icon"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" class="style-scope iron-icon"></path></g></svg>
       </div>
       <div class="me-floa-menu__label">
-        Home
+        <a href="/train">Treinar</a>
       </div>
     </div>
     <div class="me-float-menu__item">
