Creat outlier tag for events

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -55,6 +55,8 @@ font-weight: 100
 @import "@material/list/mdc-list";
 @import "@material/textfield/mdc-text-field";
 @import "@material/select/mdc-select";
+@import "@material/form-field/mdc-form-field";
+@import "@material/checkbox/mdc-checkbox";
 @import "components/me-components";
 
 
