--- a/web/app/views/events/_form.html.erb
+++ b/web/app/views/events/_form.html.erb
@@ -105,6 +105,17 @@
     </div>
   </div>
 
+  <div class="mdc-form-field">
+    <div class="mdc-checkbox">
+      <%= form.check_box :personas_outlier, {class: 'mdc-checkbox__native-control'}, 'true', 'false' %>
+      <div class="mdc-checkbox__background">
+        <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24"><path class="mdc-checkbox__checkmark-path" fill="none" d="M1.73,12.91 8.1,19.28 22.79,4.59"/> </svg>
+        <div class="mdc-checkbox__mixedmark"></div>
+      </div>
+    </div>
+    <label for="checkbox-1">Outlier</label>
+  </div>
+
   <button class="demo-button mdc-button mdc-button--unelevated mdc-ripple-upgraded">
     <span class="mdc-button__label">Salvar</span>
   </button>
